--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,10 @@ perl6:
     - latest
     - '2017.12'
 install:
-    - sudo apt update
-    - sudo apt install -y g++ wget make
     - wget https://www.libraw.org/data/LibRaw-0.18.7.tar.gz
     - tar -xzf LibRaw-0.18.7.tar.gz
     - cd LibRaw-0.18.7
-    - ./configure
+    - ./configure --prefix=/usr
     - sudo make install
     - cd ..
 ...
